# downapk

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: aarch64_release.yml  build_release.yml  extra_release.yml  generate_release.yml  generate_tag.yml  publish-crate.yml  release.yml  rust.yml  test.yml
docker/: cross-Dockerfile
scripts/: build_arm64.sh  prebuild.sh
src/: apkmirror.rs  downapk.rs  errors.rs  lib.rs  main.rs  utils.rs
src/apkmirror/: mod.rs  tests.rs
