[package]
name = "downapk"
version = "0.5.4"
edition = "2021"
categories = ["command-line-utilities"]
description = "Program to download APKs of given Android package"
homepage = "https://github.com/rabilrbl/downapk"
keywords = ["apk", "android", "download", "cli"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/rabilrbl/downapk"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "^4.4", features = ["derive"] }
console = "^0.15"
indicatif = "^0.17"
reqwest = { version = "^0.11", features = ["cookies"] }
scraper = "^0.18"
tokio = { version = "^1.35", features = ["full"] }
openssl = { version = "^0.10", features = ["vendored"] }

[build]
dockerfile = "./docker/cross-Dockerfile"

[profile.release]
strip = true

[package.metadata.binstall]
bin-dir = "{ bin }-{ target }{ binary-ext }"
