[package]
name = "downapk"
version = "0.6.2"
edition = "2021"
categories = ["command-line-utilities"]
description = "Program to download APKs of given Android package"
homepage = "https://github.com/rabilrbl/downapk"
keywords = ["apk", "android", "download", "cli"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/rabilrbl/downapk"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "^4.5", features = ["derive"] }
console = "^0.15"
indicatif = "^0.17"
reqwest = { version = "^0.11", default-features = false, features = ["cookies", "rustls-tls-native-roots"] }
scraper = "^0.18"
tokio = { version = "^1.36", features = ["full"] }

[profile.release]
strip = true

[package.metadata.binstall]
bin-dir = "{ bin }-{ target }{ binary-ext }"
